--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
     <div class="calculator">
         <div id="display">0</div>
-    </div>
+        <div class="buttons">
+            <button class="btn" id="clear">C</button>
+            <button class="btn" id="del">DEL</button>
+            <button class="btn operator" data-value="%">%</button>
+            <button class="btn operator" data-value="/">÷</button>
+        </div>
+    </div> 
 </body>
 </html>
