feat: Add second row number buttons (7–9) and multiplication operator

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <button class="btn" id="del">DEL</button>
             <button class="btn operator" data-value="%">%</button>
             <button class="btn operator" data-value="/">÷</button>
+
+            <button class="btn" data-value="7">7</button>
+            <button class="btn" data-value="8">8</button>
+            <button class="btn" data-value="9">9</button>
+            <button class="btn operator" data-value="*">×</button>
         </div>
     </div> 
 </body>
