feat: Add bottom row with 0, decimal, and equals button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <button class="btn" data-value="2">2</button>
             <button class="btn" data-value="3">3</button>
             <button class="btn operator" data-value="+">+</button>
+
+            <button class="btn" data-value="0">0</button>
+            <button class="btn" data-value=".">.</button>
+            <button class="btn" id="equals">=</button>
         </div>
     </div> 
 </body>
